--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=gateway-service
 server.port=8888
 spring.config.import=optional:configserver:${CONFIG_SERVICE_URL:http://localhost:9999}
+#eureka.client.service-url.defaultZone=http://fl-ebank-discovery-service:8761/eureka
